config in auth fields

--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,7 @@
   -->
   <!-- <base href="https://lansoyyy.github.io/macpenas_v1/"> -->
   <base href="$FLUTTER_BASE_HREF">
+  <!-- <base href="https://lansoyyy.github.io/macpenas_v1/"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
