--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <!-- <base href="https://lansoyyy.github.io/macpenas_v6/"> -->
+  <!-- <base href="https://2001105496.github.io/macpenas_v1/"> -->
   <base href="$FLUTTER_BASE_HREF">
 
 
