--- a/web/index.html
+++ b/web/index.html
@@ -59,6 +59,8 @@
       });
     });
   </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdXaMN5htLGHo8BkCfefPpuTauwHGXItU"></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 
   <script type="module">
 
